--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -49,11 +49,11 @@ html {
   width: 100%;
   height: 100%;
   z-index: -1;
-  background-image: url(/assets/images/header-img.jpg);
   filter: grayscale(100%);
-  background-position: left;
-  background-size: cover;
-  background-repeat: no-repeat;
+}
+
+.header_img img {
+  object-position: left;
 }
 
 .header_left_about {
@@ -431,7 +431,9 @@ footer .container h2 {
   .header_img {
     right: 0;
     width: 60%;
-    background-position-x: 20%;
+  }
+  .header_img img {
+    object-position: 20%;
   }
   .header_text p {
     margin-bottom: 2.2rem;
